--- a/clientload/src/main/resources/application.yaml
+++ b/clientload/src/main/resources/application.yaml
@@ -7,6 +7,11 @@ server:
 
   # -- Configure for Ribbon:
 
+
+application:
+  client:
+    url: http://localhost:6666
+
 ping-server:
   ribbon:
     eureka:
